GEM-153 fixed icon alignment on home page article hero

--- a/gem/static/css/_enhanced.article.scss
+++ b/gem/static/css/_enhanced.article.scss
@@ -34,7 +34,7 @@
     .section-image {
       width: 50px;
       float: right;
-      margin-top: -63px;
+      margin-top: -65px;
       display: block;
       margin-right: -16px;
     }
